bluejay-parser/tests/snapshots/schema_definition_integration_test__error@explicit_root_operation_type_does_not_exist.graphql.snap
---
source: bluejay-parser/tests/schema_definition_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/schema_definition/error/explicit_root_operation_type_does_not_exist.graphql
---
Error: Referenced type `DoesNotExist` does not exist
   ╭─[ explicit_root_operation_type_does_not_exist.graphql:2:10 ]
   │
 2 │   query: DoesNotExist
   │          ──────┬─────  
   │                ╰─────── No definition for referenced type
───╯
